.archive/kubernetes/prose-system/jaeger/unused-jaeger-chart/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaeger-query
spec:
  ingressClassName: nginx
  rules:
    #TODO: Drop jaeger instance in istio-system and then drop prose from here for simplicity
    - host: &host "jaeger-query-prose.${SECRET_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: jaeger-query
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - *host
